# Tech-Challenge-Fiap-Modulo-1

./: .env.example  .gitignore  README.md  Tech-Challenge-Módulo-1-fiap.postman_collection.json  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/routes/: authentication.py  books.py  categories.py  health.py  ml.py  scraping.py  stats.py
app/data/: data.csv
app/models/: book.py
app/schemas/: authentication.py  book.py  scraping.py
app/services/: book_service.py  books_service.py  categories_service.py  data_service.py  db_service.py  jwt_authentication_service.py  ml_service.py  scraping_service.py  stats_service.py
